@@ -567,6 +567,9 @@ class GUI( xbmcgui.WindowXMLDialog ):
             listControl = self.getControl( 211 )
             listitem = listControl.getSelectedItem()
             
+            # Get the default widget for this item
+            defaultWidget = self.find_default( "widget", listitem.getProperty( "labelID" ) )
+            
             # Generate list of widgets for select dialog
             widget = [""]
             widgetLabel = [__language__(32053)]
@@ -574,9 +577,13 @@ class GUI( xbmcgui.WindowXMLDialog ):
             widgetType = [ None ]
             for key in self.widgets:
                 widget.append( key[0] )
-                widgetLabel.append( key[1] )
                 widgetName.append( "" )
                 widgetType.append( key[2] )
+                
+                if key[0] == defaultWidget:
+                    widgetLabel.append( "* " + key[1] )
+                else:
+                    widgetLabel.append( key[1] )
                 
             # If playlists have been enabled for widgets, add them too
             if self.widgetPlaylists:
@@ -615,11 +622,11 @@ class GUI( xbmcgui.WindowXMLDialog ):
                         self._set_label( listitem, widgetName[selectedWidget] )
                         currentWindow.clearProperty( "useWidgetNameAsLabel" )
                 else:
-                    self._add_additionalproperty( listitem, "widgetName", widgetLabel[selectedWidget] )
+                    self._add_additionalproperty( listitem, "widgetName", widgetLabel[selectedWidget].repace( "* ", "" ) )
                     self._add_additionalproperty( listitem, "widget", widget[selectedWidget] )
                     self._remove_additionalproperty( listitem, "widgetPlaylist" )
                     if currentWindow.getProperty( "useWidgetNameAsLabel" ) == "true" :
-                        self._set_label( listitem, widgetLabel[selectedWidget] )
+                        self._set_label( listitem, widgetLabel[selectedWidget].replace( "* ", "" ) )
                         currentWindow.clearProperty( "useWidgetNameAsLabel" )
                 
                 if widgetType[ selectedWidget] is not None:
@@ -638,10 +645,13 @@ class GUI( xbmcgui.WindowXMLDialog ):
             # Create lists for the select dialog, with image browse buttons if enabled
             if self.backgroundBrowse:
                 background = ["", "", ""]         
-                backgroundLabel = [__language__(32050), __language__(32051), __language__(32052)]
+                backgroundLabel = [__language__(32053), __language__(32051), __language__(32052)]
             else:
                 background = [""]                         
-                backgroundLabel = [__language__(32050)]
+                backgroundLabel = [__language__(32053)]
+                
+            # Get the default background for this item
+            defaultBackground = self.find_default( "background", listitem.getProperty( "labelID" ) )
 
             # Generate list of backgrounds for the dialog
             for key in self.backgrounds:
@@ -654,7 +664,11 @@ class GUI( xbmcgui.WindowXMLDialog ):
                         backgroundLabel.append( key[1].replace( "::PLAYLIST::", playlist[1] ) )
                 else:
                     background.append( key[0] )            
-                    backgroundLabel.append( key[1] )
+                    if defaultBackground == key[0]:
+                        # This is the default background for the item
+                        backgroundLabel.append( "* " + key[1] )
+                    else:
+                        backgroundLabel.append( key[1] )
             
             # Show the dialog
             selectedBackground = xbmcgui.Dialog().select( __language__(32045), backgroundLabel )
@@ -697,7 +711,7 @@ class GUI( xbmcgui.WindowXMLDialog ):
                 else:
                     # User has selected a normal background
                     self._add_additionalproperty( listitem, "background", background[selectedBackground] )
-                    self._add_additionalproperty( listitem, "backgroundName", backgroundLabel[selectedBackground] )
+                    self._add_additionalproperty( listitem, "backgroundName", backgroundLabel[selectedBackground].replace( "* ", "" ) )
                     self._remove_additionalproperty( listitem, "backgroundPlaylist" )
                     self._remove_additionalproperty( listitem, "backgroundPlaylistName" )
             
@@ -871,6 +885,29 @@ class GUI( xbmcgui.WindowXMLDialog ):
                 return dialog.yesno( heading, message )
                 
         return True
+        
+        
+    def find_default( self, backgroundorwidget, labelID ):
+        # This function finds the id of an items default background or widget
+        tree = DATA._get_overrides_skin()
+        if tree is not None:
+            if backgroundorwidget == "background":
+                elems = tree.getroot().findall( "backgrounddefault" )
+            else:
+                elems = tree.getroot().findall( "widgetdefault" )
+                
+            if elems is not None:
+                for elem in elems:
+                    if elem.attrib.get( "labelID" ) == labelID:
+                        if "group" in elem.attrib:
+                            if elem.attrib.get( "group" ) == self.group:
+                                return elem.text
+                            else:
+                                continue
+                        else:
+                            return elem.text
+            return None
+                        
     
     def load_shortcuts( self, includeUserShortcuts = True, addShortcutsToWindow = True ):
         log( "Loading shortcuts" )
